--- a/compose.yaml
+++ b/compose.yaml
@@ -1,18 +1,18 @@
 services:
-  develop:
-    container_name: demo_app
-    build: .
-    environment:
-      DB_HOST: database
-      DB_PORT: 3306
-      DB_USERNAME: develop
-      DB_PASSWORD: develop2023
-      DB_NAME: multiservicios_db
-    ports:
-      - "3000:3000"
-    restart: always
-    networks:
-      - demo-app-network
+  #develop:
+  #  container_name: demo_app
+  #  build: .
+  #  environment:
+  #    DB_HOST: database
+  #    DB_PORT: 3306
+  #    DB_USERNAME: develop
+  #    DB_PASSWORD: develop2023
+  #    DB_NAME: multiservicios_db
+  #  ports:
+  #    - "3000:3000"
+  #  restart: always
+  #  networks:
+  #    - demo-app-network
   database:
     container_name: mysql_database
     image: mysql:8.0.34
